// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navigation drawer component Navigation drawer renders correctly when closed 1`] = `
<WithStyles(ForwardRef(Drawer))
  anchor="left"
  className="NavigationDrawer-drawer-1"
  classes={
    Object {
      "paper": "NavigationDrawer-drawerPaper-2",
    }
  }
  open={false}
  variant="persistent"
>
  <Styled(div)>
    <WithStyles(ForwardRef(IconButton))
      aria-label="Dropdown Menu"
      onClick={[Function]}
    >
      <Memo(ForwardRef(ChevronLeftIcon)) />
    </WithStyles(ForwardRef(IconButton))>
  </Styled(div)>
  <WithStyles(ForwardRef(Divider)) />
  <WithStyles(ForwardRef(List)) />
</WithStyles(ForwardRef(Drawer))>
`;

exports[`Navigation drawer component Navigation drawer renders correctly when open 1`] = `
<WithStyles(ForwardRef(Drawer))
  anchor="left"
  className="NavigationDrawer-drawer-1"
  classes={
    Object {
      "paper": "NavigationDrawer-drawerPaper-2",
    }
  }
  open={true}
  variant="persistent"
>
  <Styled(div)>
    <WithStyles(ForwardRef(IconButton))
      aria-label="Dropdown Menu"
      onClick={[Function]}
    >
      <Memo(ForwardRef(ChevronLeftIcon)) />
    </WithStyles(ForwardRef(IconButton))>
  </Styled(div)>
  <WithStyles(ForwardRef(Divider)) />
  <WithStyles(ForwardRef(List)) />
</WithStyles(ForwardRef(Drawer))>
`;

exports[`Navigation drawer component does not display link to homepage if a homepage link is set 1`] = `
<WithStyles(ForwardRef(Drawer))
  anchor="left"
  className="NavigationDrawer-drawer-1"
  classes={
    Object {
      "paper": "NavigationDrawer-drawerPaper-2",
    }
  }
  open={true}
  variant="persistent"
>
  <Styled(div)>
    <WithStyles(ForwardRef(IconButton))
      aria-label="Dropdown Menu"
      onClick={[Function]}
    >
      <Memo(ForwardRef(ChevronLeftIcon)) />
    </WithStyles(ForwardRef(IconButton))>
  </Styled(div)>
  <WithStyles(ForwardRef(Divider)) />
  <WithStyles(ForwardRef(List))>
    <WithStyles(ForwardRef(ListItem))>
      <WithStyles(ForwardRef(ListItemText))
        classes={
          Object {
            "primary": "NavigationDrawer-sectionTitle-3",
          }
        }
        primary="DATA"
        primaryTypographyProps={
          Object {
            "variant": "h6",
          }
        }
      />
    </WithStyles(ForwardRef(ListItem))>
    <WithStyles(ForwardRef(List))
      component="nav"
    >
      <WithStyles(ForwardRef(ListItem))
        button={true}
        component={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "displayName": "ForwardRefLink",
            "render": [Function],
          }
        }
        id="plugin-link-plugin_link"
        key="0"
        to="plugin_link"
      >
        <WithStyles(ForwardRef(ListItemText))
          classes={
            Object {
              "primary": "NavigationDrawer-menuItem-4",
            }
          }
          inset={true}
          primary="data-plugin-no-displayname"
          primaryTypographyProps={
            Object {
              "variant": "subtitle1",
            }
          }
        />
      </WithStyles(ForwardRef(ListItem))>
    </WithStyles(ForwardRef(List))>
  </WithStyles(ForwardRef(List))>
</WithStyles(ForwardRef(Drawer))>
`;

exports[`Navigation drawer component renders a plugin list grouped by sections ordered alphabetically when open 1`] = `
<WithStyles(ForwardRef(Drawer))
  anchor="left"
  className="NavigationDrawer-drawer-1"
  classes={
    Object {
      "paper": "NavigationDrawer-drawerPaper-2",
    }
  }
  open={true}
  variant="persistent"
>
  <Styled(div)>
    <WithStyles(ForwardRef(IconButton))
      aria-label="Dropdown Menu"
      onClick={[Function]}
    >
      <Memo(ForwardRef(ChevronLeftIcon)) />
    </WithStyles(ForwardRef(IconButton))>
  </Styled(div)>
  <WithStyles(ForwardRef(Divider)) />
  <WithStyles(ForwardRef(List))>
    <WithStyles(ForwardRef(ListItem))>
      <WithStyles(ForwardRef(ListItemText))
        classes={
          Object {
            "primary": "NavigationDrawer-sectionTitle-3",
          }
        }
        primary="ANALYSIS"
        primaryTypographyProps={
          Object {
            "variant": "h6",
          }
        }
      />
    </WithStyles(ForwardRef(ListItem))>
    <WithStyles(ForwardRef(List))
      component="nav"
    >
      <WithStyles(ForwardRef(ListItem))
        button={true}
        component={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "displayName": "ForwardRefLink",
            "render": [Function],
          }
        }
        id="plugin-link-link"
        key="0"
        to="link"
      >
        <WithStyles(ForwardRef(ListItemText))
          classes={
            Object {
              "primary": "NavigationDrawer-menuItem-4",
            }
          }
          inset={true}
          primary="analysis-plugin"
          primaryTypographyProps={
            Object {
              "variant": "subtitle1",
            }
          }
        />
      </WithStyles(ForwardRef(ListItem))>
      <WithStyles(ForwardRef(ListItem))
        button={true}
        component={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "displayName": "ForwardRefLink",
            "render": [Function],
          }
        }
        id="plugin-link-link"
        key="1"
        to="link"
      >
        <WithStyles(ForwardRef(ListItemText))
          classes={
            Object {
              "primary": "NavigationDrawer-menuItem-4",
            }
          }
          inset={true}
          primary="analysis-plugin2"
          primaryTypographyProps={
            Object {
              "variant": "subtitle1",
            }
          }
        />
      </WithStyles(ForwardRef(ListItem))>
    </WithStyles(ForwardRef(List))>
    <WithStyles(ForwardRef(ListItem))>
      <WithStyles(ForwardRef(ListItemText))
        classes={
          Object {
            "primary": "NavigationDrawer-sectionTitle-3",
          }
        }
        primary="DATA"
        primaryTypographyProps={
          Object {
            "variant": "h6",
          }
        }
      />
    </WithStyles(ForwardRef(ListItem))>
    <WithStyles(ForwardRef(List))
      component="nav"
    >
      <WithStyles(ForwardRef(ListItem))
        button={true}
        component={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "displayName": "ForwardRefLink",
            "render": [Function],
          }
        }
        id="plugin-link-link"
        key="0"
        to="link"
      >
        <WithStyles(ForwardRef(ListItemText))
          classes={
            Object {
              "primary": "NavigationDrawer-menuItem-4",
            }
          }
          inset={true}
          primary="data-plugin"
          primaryTypographyProps={
            Object {
              "variant": "subtitle1",
            }
          }
        />
      </WithStyles(ForwardRef(ListItem))>
      <WithStyles(ForwardRef(ListItem))
        button={true}
        component={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "displayName": "ForwardRefLink",
            "render": [Function],
          }
        }
        id="plugin-link-link"
        key="1"
        to="link"
      >
        <WithStyles(ForwardRef(ListItemText))
          classes={
            Object {
              "primary": "NavigationDrawer-menuItem-4",
            }
          }
          inset={true}
          primary="data-plugin1"
          primaryTypographyProps={
            Object {
              "variant": "subtitle1",
            }
          }
        />
      </WithStyles(ForwardRef(ListItem))>
      <WithStyles(ForwardRef(ListItem))
        button={true}
        component={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "displayName": "ForwardRefLink",
            "render": [Function],
          }
        }
        id="plugin-link-link"
        key="2"
        to="link"
      >
        <WithStyles(ForwardRef(ListItemText))
          classes={
            Object {
              "primary": "NavigationDrawer-menuItem-4",
            }
          }
          inset={true}
          primary="data-plugin2"
          primaryTypographyProps={
            Object {
              "variant": "subtitle1",
            }
          }
        />
      </WithStyles(ForwardRef(ListItem))>
      <WithStyles(ForwardRef(ListItem))
        button={true}
        component={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "displayName": "ForwardRefLink",
            "render": [Function],
          }
        }
        id="plugin-link-plugin_link"
        key="3"
        to="plugin_link"
      >
        <WithStyles(ForwardRef(ListItemText))
          classes={
            Object {
              "primary": "NavigationDrawer-menuItem-4",
            }
          }
          inset={true}
          primary="data-plugin-no-displayname"
          primaryTypographyProps={
            Object {
              "variant": "subtitle1",
            }
          }
        />
      </WithStyles(ForwardRef(ListItem))>
    </WithStyles(ForwardRef(List))>
  </WithStyles(ForwardRef(List))>
</WithStyles(ForwardRef(Drawer))>
`;

exports[`Navigation drawer component renders a plugin list grouped by sections ordered alphabetically when open 2`] = `
<WithStyles(ForwardRef(ListItem))
  button={true}
  component={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "displayName": "ForwardRefLink",
      "render": [Function],
    }
  }
  id="plugin-link-plugin_link"
  key="3"
  to="plugin_link"
>
  <WithStyles(ForwardRef(ListItemText))
    classes={
      Object {
        "primary": "NavigationDrawer-menuItem-4",
      }
    }
    inset={true}
    primary="data-plugin-no-displayname"
    primaryTypographyProps={
      Object {
        "variant": "subtitle1",
      }
    }
  />
</WithStyles(ForwardRef(ListItem))>
`;
